<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradadohelbby">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:text="@string/olvidastecontraseña"
        android:textSize="40sp"
        android:paddingLeft="30sp"
        android:textColor="@color/md_white_1000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="19sp"
        android:text="@string/introduccioOlvidarContra"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/md_white_1000"/>

    <EditText
        android:id="@+id/EmailRegistro"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textColorHint="@color/md_grey_100"
        android:textColor="@color/md_white_1000"
        android:textAlignment="center"
        android:paddingLeft="15sp"
        android:background="@drawable/button_redon"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@mipmap/ic_email_white_24dp"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/textView2"/>


    <Button
        android:id="@+id/recuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50sp"
        android:background="@drawable/button_color"
        android:hint="@string/recuperarContraeña"
        android:textSize="16sp"
        android:textColorHint="@color/md_red_100"
        android:layout_below="@+id/EmailRegistro"/>

</RelativeLayout>