<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/degradadohelbby">

    <RelativeLayout
    tools:context="com.cabg.helbby.helbby.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_marginTop="33sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/helbby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textColor="@color/md_white_1000"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/botonFacebook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:layout_marginBottom="12sp"/>


        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="10sp"
            android:textColorHint="@color/md_grey_100"
            android:textColor="@color/md_grey_100"
            android:textAlignment="center"
            android:padding="10sp"
            android:paddingLeft="10sp"
            android:background="@drawable/button_redon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@mipmap/ic_email_white_24dp"/>


        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            android:textColorHint="@color/md_grey_100"
            android:textColor="@color/md_grey_100"
            android:textAlignment="center"
            android:padding="10sp"
            android:paddingLeft="10sp"
            android:background="@drawable/button_redon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_lock_white_24dp"/>


        <Button
            android:id="@+id/recuperarContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="15sp"
            android:background="@android:color/transparent"
            android:text="@string/forgotPass"
            android:textColor="@color/md_grey_100"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/button_redon"
            android:text="@string/ingresarLogin"
            android:textColor="@color/md_grey_100" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/md_white_1000"
            android:layout_margin="30sp">

        </View>

        <Button
            android:id="@+id/registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@android:color/transparent"
            android:hint="@string/noTienesCuenta"
            android:paddingBottom="20sp"
            android:textAllCaps="false"
            android:textColorHint="@color/md_grey_100"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/requerimientos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/requerimientos"
                android:textColor="@color/md_white_1000"
                android:textSize="16sp"
                android:padding="2sp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
</ScrollView>