<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cabg.helbby.helbby.RegistroActivity"
    android:background="@drawable/degradadohelbby">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/botonFacebook2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp"
            android:layout_marginTop="50sp"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/md_white_1000"
            android:layout_margin="30sp">
        </View>

        <EditText
            android:id="@+id/nombreRegistro"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@drawable/button_redon"
            android:drawableLeft="@mipmap/ic_person_white_24dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textColorHint="@color/md_grey_100" />

        <EditText
            android:id="@+id/EmailRegistro"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="10sp"
            android:textColorHint="@color/md_grey_100"
            android:textColor="@color/md_white_1000"
            android:textAlignment="center"
            android:padding="10sp"
            android:background="@drawable/button_redon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@mipmap/ic_email_white_24dp"/>
        <EditText
            android:id="@+id/contraseñaRegistro"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="1sp"
            android:layout_marginLeft="10sp"
            android:textColorHint="@color/md_grey_100"
            android:textColor="@color/md_white_1000"
            android:textAlignment="center"
            android:padding="10sp"
            android:background="@drawable/button_redon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_lock_white_24dp"/>
        <EditText
            android:id="@+id/repetircontraseñaRegistro"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:textColorHint="@color/md_grey_100"
            android:textColor="@color/md_white_1000"
            android:textAlignment="center"
            android:padding="10sp"
            android:background="@drawable/button_redon"
            android:hint="@string/confirmarcontraseña"
            android:inputType="textPassword"
            android:drawableLeft="@mipmap/ic_lock_white_24dp"/>


        <Button
            android:id="@+id/registrarse"
            android:layout_margin="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:hint="@string/registrarse"
            android:textSize="16sp"
            android:textColorHint="@color/md_red_100"/>


    </LinearLayout>



</RelativeLayout>
